--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,47 @@
 
+#headerwrapper
+{
+    width: 100%;
+    margin: 0;
+}
 
+#logowrapper {
+    width: 5%;
+    margin: 0;
+    float: left;
+}
+
+#logodiv
+{
+    width: 2.5%;
+    margin: 0;
+    float: left;
+}
+
+#titlediv
+{
+    width: 2.5%;
+    margin: 0;
+    float: right;
+}
+
+#demodiv
+{
+    width: 3%;
+    margin: 0;
+    float: right;
+    padding-right: 5%;
+    padding-top: 20px;
+}
+
+#aboutdiv
+{
+    width: 3%;
+    margin: 0;
+    float: right;
+    padding-right: 10%;
+    padding-top: 20px;
+}
 
 .header 
 {
@@ -12,11 +54,21 @@
     padding: 0;
 }
 
+.logo
+{
+    padding-top: 10px;
+    padding-left: 10px;
+    height: 60px;
+    width: 60px;
+    margin: 0;
+}
+
 .title
 {
     font-size: 18px;
-    padding-top: 25px;
-    padding-left: 1%;
+    padding-top: 20px;
+    text-shadow: -1px -1px 0px pink, -1px -1px 10px black;
+    font-family: "Optima", "Arial", sans-serif; 
     color: black;
 }
 
