--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@
     width: 2.5%;
     margin: 0;
     float: right;
+    padding-right: .5%;
 }
 
 #demodiv
@@ -30,7 +31,7 @@
     width: 3%;
     margin: 0;
     float: right;
-    padding-right: 5%;
+    padding-right: 10%;
     padding-top: 20px;
 }
 
@@ -39,7 +40,7 @@
     width: 3%;
     margin: 0;
     float: right;
-    padding-right: 10%;
+    padding-right: 5%;
     padding-top: 20px;
 }
 
