--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
-
 #headerwrapper
 {
     width: 100%;
     margin: 0;
+    float:top;
 }
 
 #logowrapper {
@@ -42,6 +42,14 @@
     float: right;
     padding-right: 5%;
     padding-top: 20px;
+}
+
+#footerwrapper
+{
+    width: 100%;
+    height: 10%;
+    background: gray;
+    float: bottom;
 }
 
 .header 
