--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,9 @@
 {
     width: 100%;
     margin: 0;
-    float:top;
+    position: absolute;
+    top: 0;
+    left:0;
 }
 
 #logowrapper {
@@ -49,7 +51,9 @@
     width: 100%;
     height: 10%;
     background: gray;
-    float: bottom;
+    position: absolute;
+    bottom: 0;
+    left:0;
 }
 
 .header 
@@ -89,7 +93,7 @@ body,html{
 .bg {
 
     background-image: url('41212.jpg');
-    height: 100%;
+    height: 95%;
     background-position: center;
     background-repeat: repeat-y;
     background-size: cover;
