--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@
 #footerwrapper
 {
     width: 100%;
-    height: 10%;
+    height: 80px;
     background: gray;
     position: absolute;
     bottom: 0;
