--- a/styles.css
+++ b/styles.css
@@ -104,3 +104,34 @@ body,html{
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.textbox
+{
+    position: absolute; 
+    width: 40%;
+    height: 20%;
+    top:40%;
+    left:30%;
+    border-style: solid;
+    border-width: 3px;
+    border-color: black;
+}
+
+.transparent
+{
+    height:100%;
+    width:100%;
+    background-color: black;
+    opacity: 40%;
+    position: absolute;
+}
+
+.textboxheader
+{
+    font-family: "Optima", "Arial", sans-serif; 
+    font-size: 26px;
+    color: whitesmoke;
+    padding-left: 60px;
+    padding-top:15px;
+
+}
