--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,14 @@
 
 .header1 {
     position: relative;
+    left:0;
+    top:0;
+    width:100%;
+    height:50px;
+    background-color: black; 
+    padding-left: 0;
+    padding-top:0;
+
 }
 
 .generaltext {
@@ -22,11 +30,45 @@
  font-size: 45px;
 }
 
+#maintext
+{
+    width: 100%;
+    height:40%;
+    position: absolute;
+    left: 15%;
+    top:20%;
+    justify-content: center;
+    text-shadow: 1px 1px black;
+}
+
+
+#logotext
+{
+    font-family: 'Archivo', sans-serif;
+    color: white;
+    font-weight: 500;
+    font-size: 16px;
+    float:left;
+    padding-left: 68px;
+    padding-top: 4px;
+}
+
+#logo
+{
+    height: 42px;
+    width:42px;
+    float: left;
+    position: absolute;
+    padding-top:5px;
+    padding-left: 15px;
+}
+
+
 h1 {
     font-family: 'Archivo', sans-serif;
     color: white;
     font-weight: 500;
-    font-size: 120px;
+    font-size: 100px;
 }
 
 body,html{
