--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 #background1 {
-    position:fixed;
+    position:absolute;
     background-image: url("Resources/background1.jpg");
     background-position: center;
     background-size: cover;
@@ -11,8 +11,21 @@
 
 }
 
+#background2
+{
+   position:absolute;
+    background-color: white;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width:100%;
+    height: 100%;
+    top:100%;
+   
+}
+
 .header1 {
-    position: relative;
+    position: fixed;
     left:0;
     top:0;
     width:100%;
@@ -24,7 +37,7 @@
 }
 
 .generaltext {
-    font-family: 'Open Sans', sans-serif;
+font-family: 'Open Sans', sans-serif;
  font-weight: 300;
  color: white;
  font-size: 45px;
@@ -32,7 +45,7 @@
 
 #maintext
 {
-    width: 100%;
+    width: 80%;
     height:40%;
     position: absolute;
     left: 15%;
