--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
     background-position: center;
     background-repeat: no-repeat;
     width:100%;
-    height: 100%;
+    height: 60%;
     top:100%;
    
 }
@@ -89,6 +89,32 @@ h1 {
 body,html{
     margin:0;
     padding: 0;
+}
+
+#whysakura
+{
+    width: 40%;
+    height:60%;
+    position: absolute;
+    left: 40%;
+    top:5%;
+    justify-content: center;
+}
+
+.whysakura{
+
+    font-family: 'Archivo', sans-serif;
+    color: black;
+    font-weight: 300;
+    font-size: 40px;
+}
+
+.whysakuratext
+{
+font-family: 'Open Sans', sans-serif;
+ font-weight: 200;
+ color: black;
+ font-size: 24px;
 }
 
 
