--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,21 @@
    
 }
 
+#background3
+{
+   position:absolute;
+    background-color: #f0f0f0;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width:100%;
+    height: 60%;
+    top:160%;
+   
+}
+
+
+
 .header1 {
     position: fixed;
     left:0;
@@ -96,12 +111,12 @@ body,html{
     width: 40%;
     height:60%;
     position: absolute;
-    left: 40%;
+    left: 50%;
     top:5%;
     justify-content: center;
 }
 
-.whysakura{
+.subtitle{
 
     font-family: 'Archivo', sans-serif;
     color: black;
@@ -109,7 +124,7 @@ body,html{
     font-size: 40px;
 }
 
-.whysakuratext
+.subtitletext
 {
 font-family: 'Open Sans', sans-serif;
  font-weight: 200;
