--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    height: 100%;
+    height: 85%;
     width: 100%;
     left:0;
     top:0;
@@ -20,7 +20,7 @@
     background-repeat: no-repeat;
     width:100%;
     height: 60%;
-    top:100%;
+    top:85%;
    
 }
 
@@ -33,7 +33,7 @@
     background-repeat: no-repeat;
     width:100%;
     height: 60%;
-    top:160%;
+    top:145%;
    
 }
 
@@ -132,4 +132,13 @@ font-family: 'Open Sans', sans-serif;
  font-size: 24px;
 }
 
+#blockchain
+{
+    width: 40%;
+    height:60%;
+    position: absolute;
+    left: 10%;
+    top:5%;
+    justify-content: center;
+}
 
