--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,19 @@
    
 }
 
+#background4
+{
+   position:absolute;
+    background-color: pink;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width:100%;
+    height: 60%;
+    top:205%;
+   
+}
+
 
 
 .header1 {
@@ -188,6 +201,18 @@ body,html{
     left: 50%;
     top:5%;
     justify-content: center;
+}
+
+#pinkether
+{
+    padding-top: 7%;
+    padding-left: 17.5%;
+}
+
+#lock
+{
+    padding-top: 0%;
+    padding-left: 55%;
 }
 
 .subtitle{
