--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@
     width: 100%;
     left:0;
     top:0;
-
 }
 
 #background2
@@ -70,6 +69,15 @@ background: linear-gradient(0deg, rgba(135,152,222,1) 0%, rgba(225,159,251,1) 10
     width: 100%;
     height:.75%;
     top: 265%;
+}
+#titlemargin
+{
+    position:absolute;
+    background: rgb(252,110,242);
+    background: linear-gradient(90deg, rgba(252,110,242,1) 0%, rgba(59,96,250,1) 100%);
+    width: 100%;
+    height:.75%;
+    top: 85%;
 }
 
 
@@ -253,7 +261,13 @@ font-family: 'Open Sans', sans-serif;
 
 #conclusion
 {
-    margin:0;
+    justify-content: center;
+    padding-top: 1%;
+    position:absolute;
+    float:center;
+    left:35%;
+    height:5%;
+    width:30%;
 }
 
 
