--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ font-family: 'Open Sans', sans-serif;
 #maintext
 {
     width: 80%;
-    height:40%;
+    height:60%;
     position: absolute;
     left: 15%;
     top:20%;
@@ -223,14 +223,16 @@ body,html{
 
 #pinkether
 {
-    padding-top: 7%;
-    padding-left: 17.5%;
+    position:absolute;
+    top: 22%;
+    left: 17.5%;
 }
 
 #lock
 {
-    padding-top: 3%;
-    padding-left: 66%;
+    top: 13%;
+    left: 66%;
+    position:absolute;
 }
 
 .subtitle{
@@ -265,9 +267,35 @@ font-family: 'Open Sans', sans-serif;
     padding-top: 1%;
     position:absolute;
     float:center;
-    left:35%;
+    left:35.5%;
     height:5%;
     width:30%;
+}
+
+.svg
+{
+    height: 240px;
+    width: 240px;
+    position: absolute;
+    float:right;
+    padding-right: 30px;
+    top:30%;
+
+}
+
+#security
+{
+    left:15%;
+}
+
+#modern
+{
+    left:43%
+}
+
+#streamline
+{
+    left:70%;
 }
 
 
